--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.9",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
