--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-maps-react": "^2.0.6",
     "mongoose": "^5.10.9",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
