--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.20.0",
     "dotenv": "^8.2.0",
     "google-maps-react": "^2.0.6",
+    "js-cookie": "^2.2.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
